--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,13 @@
         android:orientation="vertical"
         android:layout_gravity="center_vertical"
         tools:context=".MainActivity" >
-
-    <TextView
-            android:id="@+id/result_text"
+    
+    <ImageView
+            android:id="@+id/dice_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textSize="30sp"
-            android:text="Hello World!" />
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/dice_1"/>
 
     <Button
             android:id="@+id/roll_button"
